# libkperf

./: .gitignore  .gitmodules  CMakeLists.txt  Common.cmake  Contributing.md  README.en.md  README.md  build.sh  pmu_main.cpp
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
docs/: C_C++_API.md  Details.md  Details_Usage.md  Go_API.md  PythonApI.md  Python_API.md
example/: llc_miss_ratio.cpp  pmu_datasrc.cpp  pmu_hotspot.cpp  pmu_hotspot.go  pmu_hotspot.py  pmu_perfdata.cpp  run.sh
example/case/: blocked_sample_case.cpp  ddrc_case.cpp  falsesharing_demo.c  falsesharing_demo.cpp  on_cpu_hotspot.cpp  read_off_cpu.cpp
examples/: pmu_hotspot.cpp  pmu_hotspot.go  pmu_hotspot.py
examples/cases/: on_cpu_hotspot.cpp  read_off_cpu.cpp  sleep_off_cpu.cpp
go/: CMakeLists.txt  kperf.go
go/src/libkperf/kperf/: kperf.go
go/src/libkperf/sym/: sym.go
go/src/libkperf_test/: libkperf_test.go
include/: pcerrc.h  pmu.h
java/java_agent/: CMakeLists.txt
java/java_agent/map/: perf-map-agent.c  perf-map-file.c  perf-map-file.h
java/java_trace/: build.gradle  java_trace_config.h.in  pom.xml  settings.gradle  trace_filter.conf
java/java_trace/trace_agent/: build.gradle  pom.xml
java/java_trace/trace_agent/src/main/java/com/libkperf/tracex/agent/: CallGraphIndex.java  FilterRule.java  MethodId.java  TraceAgent.java  TraceConfig.java  TraceFilterFile.java  TraceLog.java  Util.java
java/java_trace/trace_agent/src/main/native/: tracex_threadinfo.c
java/java_trace/trace_cli/: build.gradle  pom.xml
java_agent/: CMakeLists.txt
java_agent/map/: perf-map-agent.c  perf-map-file.c  perf-map-file.h
llvm-symbolizer/: CMakeLists.txt
llvm-symbolizer/include/llvm/DebugInfo/: DIContext.h
llvm-symbolizer/include/llvm/DebugInfo/Symbolize/: SymbolizableModule.h  Symbolize.h
llvm-symbolizer/lib/: CMakeLists.txt  LLVMBuild.txt
llvm-symbolizer/lib/DebugInfo/: CMakeLists.txt
llvm-symbolizer/lib/DebugInfo/DWARF/: DWARFContext.cpp  DWARFFormValue.cpp
llvm-symbolizer/lib/DebugInfo/Symbolize/: SymbolizableObjectFile.cpp  SymbolizableObjectFile.h  Symbolize.cpp
llvm-symbolizer/lib/Object/: SymbolSize.cpp
llvm-symbolizer/lib/Support/: raw_ostream.cpp
llvm-symbolizer/lib/TableGen/: CMakeLists.txt
pmu/: CMakeLists.txt  cache_collect.cpp  cpu_freq.cpp  cpu_freq.h  dummy_event.cpp  dummy_event.h  dump_perf_data.cpp  evt.cpp  evt.h  evt_list.cpp  evt_list.h  evt_list_default.cpp  evt_list_default.h  perf_counter.cpp  perf_counter.h  perf_counter_default.cpp  perf_counter_default.h  pmu.cpp  pmu_analysis.cpp  pmu_analysis.h  pmu_datasrc.cpp  pmu_event.cpp  pmu_event.h  pmu_event_list.cpp  pmu_event_list.h  pmu_list.cpp  pmu_list.h  pmu_metric.cpp  pmu_metric.h  pmu_trace_analysis.cpp  sample_process.cpp  sample_process.h  sampler.cpp  sampler.h  spe.cpp  spe.h  spe_sampler.cpp  spe_sampler.h  trace.cpp  trace_point_parser.cpp  (+3 more)
pmu/bpf/: evt_list_bpf.cpp  evt_list_bpf.h  perf_counter_bpf.cpp  perf_counter_bpf.h  sched_cgroup.bpf.c  sched_counter.bpf.c
pmu/decoder/: arm_spe_decoder.cpp  arm_spe_decoder.h
pmu/lbr_driver/: simple-pebs.h  simple_pebs_backend.cpp  simple_pebs_backend.h
pmu/pfm/: core.cpp  core.h  pfm.cpp  pfm.h  pfm_event.h  pfm_name.cpp  pfm_name.h  trace.cpp  trace.h  uncore.cpp  uncore.h
pmu/proc/: proc_data_common.cpp  proc_data_common.h  proc_data_const.cpp  proc_data_const.h  proc_data_converter.cpp  proc_data_freer.cpp  proc_data_manager.cpp  proc_data_manager.h  proc_data_pid_parser.cpp  proc_data_sys_parser.cpp  proc_data_types.h
pmu/trace/: java_backend.cpp  java_backend.h  java_trace_manager.cpp  java_trace_manager.h  java_trace_util.cpp  java_trace_util.h  probe_alias_manager.cpp  probe_alias_manager.h  probe_registrar.cpp  probe_registrar.h  trace_data_manager.cpp  trace_data_manager.h  trace_filter.conf
python/: CMakeLists.txt  pytest.ini  requirements.txt
python/modules/: CMakeLists.txt  __init__.py  clean_build.cmake  setup.py.in
python/modules/_libkperf/: Config.py  Perror.py  Pmu.py  Symbol.py  __init__.py
python/modules/kperf/: __init__.py  perror.py  pmu.py  trace_pointer.py
python/modules/ksym/: __init__.py  symbol.py
python/tests/: test_api.py  test_brbe.py  test_counting.py  test_metric.py  test_sampling.py  test_trace_analysis.cpp  test_trace_analysis.py
symbol/: CMakeLists.txt  elf_scanner.cpp  elf_scanner.h  java_symbol.cpp  java_symbol.h  name_resolve.cpp  name_resolve.h  symbol.cpp  symbol.h  symbol_resolve.cpp  symbol_resolve.h
test/: CMakeLists.txt
test/test_perf/: CMakeLists.txt  test_api.cpp  test_cgroup.cpp  test_common.cpp  test_common.h  test_count.cpp  test_group.cpp  test_metric.cpp  test_pmu.cpp  test_spe.cpp  test_trace_analysis.cpp  test_trace_pointer.cpp  test_user_access.cpp  test_utrace.cpp
test/test_perf/case/: CMakeLists.txt  bad_branch_pred.cpp  bad_cache_locality.cpp  cross_socket_access.cpp  good_branch_pred.cpp  good_cache_locality.cpp  in_node_access.cpp  pwritev_file.cpp  simple.cpp  test_100000thread.cpp  test_10000thread.cpp  test_12threads.cpp  test_create_thread.cpp  test_fork.cpp  test_new_fork.cpp  test_short_child.cpp  test_syscall_futex.cpp  test_syscall_read_write.cpp  test_syscall_sleep.cpp  test_utrace_app.cpp  test_utrace_elf.cpp  vectorized_loop.cpp  write_on_numa1.cpp  write_on_numa2.cpp
test/test_symbol/: CMakeLists.txt  test_libsym.cpp
test/test_symbol/case/: CMakeLists.txt  libsym_case.cpp
tools/: CMakeLists.txt  README.md  build_tools.sh
tools/cache_collect/: CMakeLists.txt  README.en.md  README.md  collect.cpp  collect.h  collect_args.cpp  collect_args.h  main.cpp  utils.cpp  utils.h
tools/case/: CMakeLists.txt  falsesharing_demo.cpp  sleep_off_cpu.cpp
tools/false_sharing/: CMakeLists.txt  pmu_datasrc_core.cpp  pmu_datasrc_core.h  pmu_datasrc_main.cpp
tools/lbr_driver/: Makefile  README.md  simple-pebs.c
tools/pmu_hotspot/: pmu_hotspot.go
util/: CMakeLists.txt  common.cpp  common.h  cpu_map.cpp  cpu_map.h  linked_list.h  log.h  pcerr.cpp  pcerr.h  process_map.cpp  process_map.h  read_reg.cpp  read_reg.h  safe_handler.h  util_time.cpp  util_time.h
(+7 files in other folders)
